links unseen in dark mode fixed, headermade wider

--- a/src/app/_components/Header.module.scss
+++ b/src/app/_components/Header.module.scss
@@ -6,7 +6,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	min-height: 70px;
+	min-height: 80px;
 	width: 100%;
 	background-color: $dark;
 	color: $light;
