--- a/src/app/_components/Menu.module.scss
+++ b/src/app/_components/Menu.module.scss
@@ -15,7 +15,7 @@
 	justify-content: flex-end;
 	align-items: center;
 	position: absolute;
-	min-height: 70px;
+	min-height: 80px;
 	top: 0;
 	left: 50%;
 	transform: translate(-50%);
